# gmath

./: README.md  gmath.h  sexymathlibrary.h
tests/: .gitignore  CMakeLists.txt  advancedtests.cpp  build.bat  constantstests.cpp  gmathtests.cpp  matrixtests.cpp  practicaltests.cpp  quaterniontests.cpp  run.bat  sexymathtests.cpp  vectortests.cpp
